--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <br>
     <div class="container-fluid" style="padding: 0;">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="max-height: 550px;">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -25,13 +25,17 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100 img-fluid" style="max-height: 550px" src="CAPAS/capa1.png" alt="First slide">
+            <img class="d-block w-100 img-fluid" style="max-height: 650px" src="CAPAS/capa1.png" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100 img-fluid" style="max-height: 550px" src="CAPAS/capa2.png" alt="Second slide">
+            <a href="https://forms.gle/iGoe32CKzY1K7tUr7" target="_blank">
+              <img class="d-block w-100 img-fluid" style="max-height: 650px" src="CAPAS/capa2.png" alt="Second slide">
+            </a>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100 img-fluid" style="max-height: 550px" src="CAPAS/capa3.png" alt="Third slide">
+            <a href="#conteudo">
+              <img class="d-block w-100 img-fluid" style="max-height: 650px" href="#conteudo" src="CAPAS/capa3.png" alt="Third slide">
+            </a>
           </div>
           
         </div>
