--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/28300534a0.js" crossorigin="anonymous"></script>
-    <title>ACERVO DO WILL</title>
+    <link rel="icon" type="image/x-icon" href="icon.ico">
+    <title>Museu Zoológico UniSales</title>
   </head>
   <body>
     
