--- a/categoria.html
+++ b/categoria.html
@@ -38,7 +38,7 @@
 
 
       function carregaJSON(){
-        fetch('https://raw.githubusercontent.com/luizclaudio07/luizclaudio07.github.io/master/bd-pecas.json?v='+Math.floor(Math.random() * 999)) 
+        fetch('https://raw.githubusercontent.com/acervozoounisales/acervozoounisales.github.io/main/bd-pecas.json?v='+Math.floor(Math.random() * 999)) 
         .then(response => response.json())  
         .then(data =>  { 
           debugger;
