--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       var bd = [];
 
       function carregaJSON(){
-        fetch('https://raw.githubusercontent.com/luizclaudio07/luizclaudio07.github.io/master/bd.json?v='+Math.floor(Math.random() * 999)) 
+        fetch('https://raw.githubusercontent.com/acervozoounisales/acervozoounisales.github.io/main/bd.json?v='+Math.floor(Math.random() * 999)) 
         .then(response => response.json())  
         .then(data =>  { 
         
