--- a/categoria.html
+++ b/categoria.html
@@ -38,6 +38,7 @@
 
 
       function carregaJSON(){
+        debugger;
         fetch('https://raw.githubusercontent.com/acervozoounisales/acervozoounisales.github.io/main/bd-pecas.json?v='+Math.floor(Math.random() * 999)) 
         .then(response => response.json())  
         .then(data =>  { 
